@@ -34,7 +34,7 @@
  </stability>
  <license uri="http://www.horde.org/licenses/gpl">GPL-2.0</license>
  <notes>
-* 
+* [mms] Fix recursive mailbox delete in dynamic view (Bug #11288).
  </notes>
  <contents>
   <dir baseinstalldir="/" name="/">
@@ -2617,7 +2617,7 @@
    <date>2012-07-20</date>
    <license uri="http://www.horde.org/licenses/gpl">GPL-2.0</license>
    <notes>
-* 
+* [mms] Fix recursive mailbox delete in dynamic view (Bug #11288).
    </notes>
   </release>
  </changelog>
