@@ -2,6 +2,7 @@
 v6.0.0beta2
 -----------
 
+[mms] Fix recursive mailbox delete in dynamic view (Bug #11288).
 
 
 -----------
